Revise personal description in index.html
Updated personal description to reflect current studies and career goals.

--- a/index.html
+++ b/index.html
@@ -26,11 +26,7 @@
         <h2 id="title">Business Technology and Computer Science Student</h2>
         <h3 id="subtitle">University of Miami</h3>
         <p id="description">
-            Hi! I am a third-year student at the University of Miami's Herbert
-            Business School, pursuing a Bachelor of Science in Business
-            Administration, majoring in Business Technology and minoring in Computer
-            Science. I am resourceful and innovative, looking to grow my
-            professional experience with any opportunity that may come my way.
+            I am Business Technology major with a Computer Science minor at the University of Miami's Herbert Business School, graduating May 2026. I'm actively seeking full-time opportunities in technology consulting, cloud computing, and database management.
         </p>
     </div>
 </main>
